model/src/main/java/tech/metavm/expression/antlr/MetaVMParser.java
// Generated from MetaVMParser.g4 by ANTLR 4.13.1
package tech.metavm.expression.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MetaVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALL_MATCH=1, AS=2, DECIMAL_LITERAL=3, HEX_LITERAL=4, OCT_LITERAL=5, BINARY_LITERAL=6, 
		FLOAT_LITERAL=7, HEX_FLOAT_LITERAL=8, BOOL_LITERAL=9, SINGLE_QUOTED_STRING_LITERAL=10, 
		STRING_LITERAL=11, TEXT_BLOCK=12, NULL_LITERAL=13, LPAREN=14, RPAREN=15, 
		LBRACE=16, RBRACE=17, LBRACK=18, RBRACK=19, SEMI=20, COMMA=21, DOT=22, 
		EQUAL=23, GT=24, LT=25, BANG=26, TILDE=27, QUESTION=28, COLON=29, LE=30, 
		GE=31, NOTEQUAL=32, AND=33, OR=34, INC=35, DEC=36, ADD=37, SUB=38, MUL=39, 
		DIV=40, BITAND=41, BITOR=42, CARET=43, MOD=44, ARROW=45, COLONCOLON=46, 
		AT=47, ELLIPSIS=48, WS=49, COMMENT=50, LINE_COMMENT=51, IDENTIFIER=52, 
		THIS=53, SUPER=54, CLASS=55, NEW=56, INSTANCEOF=57, FINAL=58, MODULE=59, 
		OPEN=60, REQUIRES=61, EXPORTS=62, OPENS=63, TO=64, USES=65, PROVIDES=66, 
		WITH=67, TRANSITIVE=68, YIELD=69, SEALED=70, PERMITS=71, RECORD=72, VAR=73, 
		VOID=74, EXTENDS=75, BOOLEAN=76, CHAR=77, BYTE=78, SHORT=79, INT=80, LONG=81, 
		FLOAT=82, DOUBLE=83;
	public static final int
		RULE_primary = 0, RULE_expression = 1, RULE_allMatch = 2, RULE_list = 3, 
		RULE_pattern = 4, RULE_variableModifier = 5, RULE_innerCreator = 6, RULE_creator = 7, 
		RULE_nonWildcardTypeArgumentsOrDiamond = 8, RULE_explicitGenericInvocation = 9, 
		RULE_classCreatorRest = 10, RULE_arrayCreatorRest = 11, RULE_arrayInitializer = 12, 
		RULE_variableInitializer = 13, RULE_createdName = 14, RULE_typeArgumentsOrDiamond = 15, 
		RULE_methodCall = 16, RULE_expressionList = 17, RULE_explicitGenericInvocationSuffix = 18, 
		RULE_superSuffix = 19, RULE_arguments = 20, RULE_elementValueArrayInitializer = 21, 
		RULE_literal = 22, RULE_integerLiteral = 23, RULE_floatLiteral = 24, RULE_identifier = 25, 
		RULE_typeIdentifier = 26, RULE_typeTypeOrVoid = 27, RULE_elementValuePairs = 28, 
		RULE_elementValuePair = 29, RULE_elementValue = 30, RULE_qualifiedName = 31, 
		RULE_altAnnotationQualifiedName = 32, RULE_annotation = 33, RULE_typeArgument = 34, 
		RULE_typeArguments = 35, RULE_classOrInterfaceType = 36, RULE_typeType = 37, 
		RULE_primitiveType = 38, RULE_nonWildcardTypeArguments = 39, RULE_typeList = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"primary", "expression", "allMatch", "list", "pattern", "variableModifier", 
			"innerCreator", "creator", "nonWildcardTypeArgumentsOrDiamond", "explicitGenericInvocation", 
			"classCreatorRest", "arrayCreatorRest", "arrayInitializer", "variableInitializer", 
			"createdName", "typeArgumentsOrDiamond", "methodCall", "expressionList", 
			"explicitGenericInvocationSuffix", "superSuffix", "arguments", "elementValueArrayInitializer", 
			"literal", "integerLiteral", "floatLiteral", "identifier", "typeIdentifier", 
			"typeTypeOrVoid", "elementValuePairs", "elementValuePair", "elementValue", 
			"qualifiedName", "altAnnotationQualifiedName", "annotation", "typeArgument", 
			"typeArguments", "classOrInterfaceType", "typeType", "primitiveType", 
			"nonWildcardTypeArguments", "typeList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'allmatch'", "'as'", null, null, null, null, null, null, null, 
			null, null, null, "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", 
			"'<='", "'>='", "'!='", "'and'", "'or'", "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'->'", "'::'", "'@'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALL_MATCH", "AS", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
			"BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", 
			"SINGLE_QUOTED_STRING_LITERAL", "STRING_LITERAL", "TEXT_BLOCK", "NULL_LITERAL", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
			"DOT", "EQUAL", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "LE", 
			"GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", 
			"BITAND", "BITOR", "CARET", "MOD", "ARROW", "COLONCOLON", "AT", "ELLIPSIS", 
			"WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER", "THIS", "SUPER", "CLASS", 
			"NEW", "INSTANCEOF", "FINAL", "MODULE", "OPEN", "REQUIRES", "EXPORTS", 
			"OPENS", "TO", "USES", "PROVIDES", "WITH", "TRANSITIVE", "YIELD", "SEALED", 
			"PERMITS", "RECORD", "VAR", "VOID", "EXTENDS", "BOOLEAN", "CHAR", "BYTE", 
			"SHORT", "INT", "LONG", "FLOAT", "DOUBLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetaVMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetaVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(MetaVMParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MetaVMParser.RPAREN, 0); }
		public TerminalNode THIS() { return getToken(MetaVMParser.THIS, 0); }
		public TerminalNode SUPER() { return getToken(MetaVMParser.SUPER, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TypeTypeOrVoidContext typeTypeOrVoid() {
			return getRuleContext(TypeTypeOrVoidContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MetaVMParser.DOT, 0); }
		public TerminalNode CLASS() { return getToken(MetaVMParser.CLASS, 0); }
		public NonWildcardTypeArgumentsContext nonWildcardTypeArguments() {
			return getRuleContext(NonWildcardTypeArgumentsContext.class,0);
		}
		public ExplicitGenericInvocationSuffixContext explicitGenericInvocationSuffix() {
			return getRuleContext(ExplicitGenericInvocationSuffixContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaVMParserListener ) ((MetaVMParserListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaVMParserListener ) ((MetaVMParserListener)listener).exitPrimary(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primary);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(LPAREN);
				setState(83);
				expression(0);
				setState(84);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(THIS);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(SUPER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				literal();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				identifier();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				typeTypeOrVoid();
				setState(91);
				match(DOT);
				setState(92);
				match(CLASS);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94);
				nonWildcardTypeArguments();
				setState(98);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
				case SUPER:
				case MODULE:
				case OPEN:
				case REQUIRES:
				case EXPORTS:
				case OPENS:
				case TO:
				case USES:
				case PROVIDES:
				case WITH:
				case TRANSITIVE:
				case YIELD:
				case SEALED:
				case PERMITS:
				case RECORD:
				case VAR:
					{
					setState(95);
					explicitGenericInvocationSuffix();
					}
					break;
				case THIS:
					{
					setState(96);
					match(THIS);
					setState(97);
					arguments();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Token bop;
		public Token prefix;
		public Token postfix;
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public List<TypeTypeContext> typeType() {
			return getRuleContexts(TypeTypeContext.class);
		}
		public TypeTypeContext typeType(int i) {
			return getRuleContext(TypeTypeContext.class,i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MetaVMParser.DOT, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public AllMatchContext allMatch() {
			return getRuleContext(AllMatchContext.class,0);
		}
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public TerminalNode NEW() { return getToken(MetaVMParser.NEW, 0); }
		public CreatorContext creator() {
			return getRuleContext(CreatorContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(MetaVMParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MetaVMParser.RPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<TerminalNode> BITAND() { return getTokens(MetaVMParser.BITAND); }
		public TerminalNode BITAND(int i) {
			return getToken(MetaVMParser.BITAND, i);
		}
		public TerminalNode ADD() { return getToken(MetaVMParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(MetaVMParser.SUB, 0); }
		public TerminalNode INC() { return getToken(MetaVMParser.INC, 0); }
		public TerminalNode DEC() { return getToken(MetaVMParser.DEC, 0); }
		public TerminalNode TILDE() { return getToken(MetaVMParser.TILDE, 0); }
		public TerminalNode BANG() { return getToken(MetaVMParser.BANG, 0); }
		public TerminalNode MUL() { return getToken(MetaVMParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(MetaVMParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(MetaVMParser.MOD, 0); }
		public List<TerminalNode> LT() { return getTokens(MetaVMParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(MetaVMParser.LT, i);
		}
		public List<TerminalNode> GT() { return getTokens(MetaVMParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(MetaVMParser.GT, i);
		}
		public TerminalNode LE() { return getToken(MetaVMParser.LE, 0); }
		public TerminalNode GE() { return getToken(MetaVMParser.GE, 0); }
		public TerminalNode EQUAL() { return getToken(MetaVMParser.EQUAL, 0); }
		public TerminalNode NOTEQUAL() { return getToken(MetaVMParser.NOTEQUAL, 0); }
		public TerminalNode CARET() { return getToken(MetaVMParser.CARET, 0); }
		public TerminalNode BITOR() { return getToken(MetaVMParser.BITOR, 0); }
		public TerminalNode AND() { return getToken(MetaVMParser.AND, 0); }
		public TerminalNode OR() { return getToken(MetaVMParser.OR, 0); }
		public TerminalNode COLON() { return getToken(MetaVMParser.COLON, 0); }
		public TerminalNode QUESTION() { return getToken(MetaVMParser.QUESTION, 0); }
		public TerminalNode THIS() { return getToken(MetaVMParser.THIS, 0); }
		public InnerCreatorContext innerCreator() {
			return getRuleContext(InnerCreatorContext.class,0);
		}
		public TerminalNode SUPER() { return getToken(MetaVMParser.SUPER, 0); }
		public SuperSuffixContext superSuffix() {
			return getRuleContext(SuperSuffixContext.class,0);
		}
		public ExplicitGenericInvocationContext explicitGenericInvocation() {
			return getRuleContext(ExplicitGenericInvocationContext.class,0);
		}
		public NonWildcardTypeArgumentsContext nonWildcardTypeArguments() {
			return getRuleContext(NonWildcardTypeArgumentsContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(MetaVMParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(MetaVMParser.RBRACK, 0); }
		public TerminalNode AS() { return getToken(MetaVMParser.AS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MetaVMParser.IDENTIFIER, 0); }
		public TerminalNode INSTANCEOF() { return getToken(MetaVMParser.INSTANCEOF, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaVMParserListener ) ((MetaVMParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaVMParserListener ) ((MetaVMParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(103);
				primary();
				}
				break;
			case 2:
				{
				setState(104);
				typeType();
				setState(105);
				((ExpressionContext)_localctx).bop = match(DOT);
				setState(106);
				identifier();
				}
				break;
			case 3:
				{
				setState(108);
				list();
				}
				break;
			case 4:
				{
				setState(109);
				allMatch();
				}
				break;
			case 5:
				{
				setState(110);
				methodCall();
				}
				break;
			case 6:
				{
				setState(111);
				match(NEW);
				setState(112);
				creator();
				}
				break;
			case 7:
				{
				setState(113);
				match(LPAREN);
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(114);
						annotation();
						}
						} 
					}
					setState(119);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(120);
				typeType();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BITAND) {
					{
					{
					setState(121);
					match(BITAND);
					setState(122);
					typeType();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128);
				match(RPAREN);
				setState(129);
				expression(16);
				}
				break;
			case 8:
				{
				setState(131);
				((ExpressionContext)_localctx).prefix = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 515396075520L) != 0)) ) {
					((ExpressionContext)_localctx).prefix = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(132);
				expression(14);
				}
				break;
			case 9:
				{
				setState(133);
				((ExpressionContext)_localctx).prefix = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==BANG || _la==TILDE) ) {
					((ExpressionContext)_localctx).prefix = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(134);
				expression(13);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(214);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(212);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(137);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(138);
						((ExpressionContext)_localctx).bop = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 19241453486080L) != 0)) ) {
							((ExpressionContext)_localctx).bop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(139);
						expression(13);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(140);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(141);
						((ExpressionContext)_localctx).bop = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((ExpressionContext)_localctx).bop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(142);
						expression(12);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(143);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(151);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
						case 1:
							{
							setState(144);
							match(LT);
							setState(145);
							match(LT);
							}
							break;
						case 2:
							{
							setState(146);
							match(GT);
							setState(147);
							match(GT);
							setState(148);
							match(GT);
							}
							break;
						case 3:
							{
							setState(149);
							match(GT);
							setState(150);
							match(GT);
							}
							break;
						}
						setState(153);
						expression(11);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(154);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(155);
						((ExpressionContext)_localctx).bop = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3271557120L) != 0)) ) {
							((ExpressionContext)_localctx).bop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(156);
						expression(10);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(157);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(158);
						((ExpressionContext)_localctx).bop = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==EQUAL || _la==NOTEQUAL) ) {
							((ExpressionContext)_localctx).bop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(159);
						expression(8);
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(160);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(161);
						((ExpressionContext)_localctx).bop = match(BITAND);
						setState(162);
						expression(7);
						}
						break;
					case 7:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(163);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(164);
						((ExpressionContext)_localctx).bop = match(CARET);
						setState(165);
						expression(6);
						}
						break;
					case 8:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(166);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(167);
						((ExpressionContext)_localctx).bop = match(BITOR);
						setState(168);
						expression(5);
						}
						break;
					case 9:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(169);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(170);
						((ExpressionContext)_localctx).bop = match(AND);
						setState(171);
						expression(4);
						}
						break;
					case 10:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(172);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(173);
						((ExpressionContext)_localctx).bop = match(OR);
						setState(174);
						expression(3);
						}
						break;
					case 11:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(175);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(176);
						((ExpressionContext)_localctx).bop = match(QUESTION);
						setState(177);
						expression(0);
						setState(178);
						match(COLON);
						setState(179);
						expression(1);
						}
						break;
					case 12:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(181);
						if (!(precpred(_ctx, 23))) throw new FailedPredicateException(this, "precpred(_ctx, 23)");
						setState(182);
						((ExpressionContext)_localctx).bop = match(DOT);
						setState(194);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
						case 1:
							{
							setState(183);
							identifier();
							}
							break;
						case 2:
							{
							setState(184);
							methodCall();
							}
							break;
						case 3:
							{
							setState(185);
							match(THIS);
							}
							break;
						case 4:
							{
							setState(186);
							match(NEW);
							setState(188);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==LT) {
								{
								setState(187);
								nonWildcardTypeArguments();
								}
							}
